--- a/src/MassTransit.QuartzIntegration.Tests/packages.config
+++ b/src/MassTransit.QuartzIntegration.Tests/packages.config
@@ -4,8 +4,9 @@
   <package id="Common.Logging.Log4Net1211" version="2.1.2" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Magnum" version="2.1.0" targetFramework="net40" />
-  <package id="MassTransit" version="2.7.4" targetFramework="net40" />
-  <package id="MassTransit.Log4Net" version="2.7.4" targetFramework="net40" />
+  <package id="MassTransit" version="2.8.0" targetFramework="net40" />
+  <package id="MassTransit.Log4Net" version="2.8.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="NUnit.Runners" version="2.6.2" />
   <package id="Quartz" version="2.1.2" targetFramework="net40" />
