--- a/src/MassTransit.QuartzService/packages.config
+++ b/src/MassTransit.QuartzService/packages.config
@@ -4,11 +4,12 @@
   <package id="Common.Logging.Log4Net1211" version="2.1.2" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Magnum" version="2.1.0" targetFramework="net40" />
-  <package id="MassTransit" version="2.7.4" targetFramework="net40" />
-  <package id="MassTransit.Log4Net" version="2.7.4" targetFramework="net40" />
-  <package id="MassTransit.RabbitMQ" version="2.7.4" targetFramework="net40" />
+  <package id="MassTransit" version="2.8.0" targetFramework="net40" />
+  <package id="MassTransit.Log4Net" version="2.8.0" targetFramework="net40" />
+  <package id="MassTransit.RabbitMQ" version="2.8.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="Quartz" version="2.1.2" targetFramework="net40" />
-  <package id="RabbitMQ.Client" version="3.0.4" targetFramework="net40" />
+  <package id="RabbitMQ.Client" version="3.1.1" targetFramework="net40" />
   <package id="TopShelf" version="3.1.1" targetFramework="net40" />
   <package id="Topshelf.Log4Net" version="3.1.1" targetFramework="net40" />
 </packages>
